@@ -5,3 +5,4 @@ mobac.mapsources.mappacks.region_europe_east.FreemapSlovakiaHiking
 mobac.mapsources.mappacks.region_europe_east.MoldovaPointMd
 mobac.mapsources.mappacks.region_europe_east.Turaterkep
 mobac.mapsources.mappacks.region_europe_east.OSMapaTopo
+mobac.mapsources.mappacks.region_europe_east.OSMapaTopoContours
